# invenio-globus-kcworks

./: LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml
invenio_globus_kcworks/: __init__.py  config.py  ext.py  oauth.py  views.py
invenio_globus_kcworks/docs/: cursor_oauth_authorization_for_globus_a.md  cursor_understanding_invenio_oauthclien.md
invenio_globus_kcworks/templates/invenio_globus_kcworks/: dashboard.html
tests/: __init__.py  conftest.py  test_oauth.py
